estadisticas, en proceso

--- a/src/app/components/estadistica/estadistica.component.html
+++ b/src/app/components/estadistica/estadistica.component.html
@@ -1,1 +1,40 @@
-<p>estadistica works!</p>
+<div class="container-fluid" style="margin-bottom: 100px;">
+   
+    <div class="container-xl">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-12">
+                <h3>Graficos Por: </h3>
+                <button class="btn btn-secondary m-1" (click)="oficinasGrafica()">Por Oficina</button>
+                <button class="btn btn-primary m-1" (click)="mesGrafica()">Por mes</button>
+                <button class="btn btn-danger m-1" (click)="anioGrafica()">Por Año</button>
+                <button class="btn btn-dark m-1" (click)="participanteGrafica()">Por Participante</button>
+            </div>
+
+        </div>
+        
+        </div>
+
+        <div class="row">
+
+       
+            <div class="col-6 col-md-6 mb-5">
+
+                    <h3>Grafico de Torta</h3>
+                    <div style="height:150px;width:70%">
+                        <canvas id="chartPie"></canvas>
+                    </div>
+
+            </div>  
+        
+            <div class="col-6 col-md-6  mb-5">
+
+                    <h3>Grafico de Barras</h3>
+                    <div style="height:100%;width:100%">
+                        <canvas id="bar"></canvas>
+                    </div>
+            </div>
+           
+        
+        </div>
+    </div>
+
