--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,14 +12,7 @@
           <li class="nav-item">
             <a  class="nav-link" aria-current="page" type="button">Informacion</a>
           </li>
-          <li class="nav-item">
-            <a  class="nav-link" aria-current="page" type="button">Ayuda</a>
-          </li>
-          <li class="nav-item" *ngIf="loginService.userLoggedIn()">
-              <a class="nav-link" [routerLink]="'calendar'">Calendario</a>
-          </li>
         </ul> 
-     
         <form class="d-flex">
           <div class="dropdown" *ngIf="loginService.userLoggedIn()">
             <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
@@ -27,22 +20,13 @@
               <strong>{{loginService.userLogged()}}</strong>
             </a>
             <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-              <li><a class="dropdown-item" href="#">Perfil</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item"  *ngIf="loginService.userLoggedIn()" [routerLink]="['login']" (click)="logout()">
-             Cerrar Sesion
-            </a></li>
+              <li><a class="dropdown-item"  *ngIf="loginService.userLoggedIn()" [routerLink]="['login']" (click)="logout()">Cerrar Sesion</a></li>
             </ul>
           </div>
-         
         </form>
-       
         <form class="d-flex">
           <button type="button" class="btn"  *ngIf="!loginService.userLoggedIn()"  [routerLink]="['login']">Iniciar Sesion </button>
-          
         </form>
-       
-            
       </div>
     </div>
   </nav> 
