--- a/src/app/components/principal-admi/principal-admi.component.html
+++ b/src/app/components/principal-admi/principal-admi.component.html
@@ -1,39 +1,34 @@
 
 <div class="row container-fluid">
   <div id="inicio">
-    <!-- Background image -->
     <div  class="text-center">
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white">
           <h1 class="mb-3"><i class="fa-brands fa-guilded"></i> <br> Inicio Administrador</h1>
-          <!-- Breadcrumb -->
           <nav class="d-flex">
             <h6 class="mb-0">
-              <a href="" class="text-reset">Home</a>
+              <a routerLink="/principal/Administrador" class="text-reset">Home</a>
               <span>/</span>
             </h6>
           </nav>
-          <!-- Breadcrumb -->
         </div>
-      </div>
-                         
+      </div>                   
     </div>
     <div id="flecha">
       <i class="fa-solid fa-angle-down"></i>
-    </div>
-                      
-    <div id="container-cards" class=" d-flex align-items-start justify-content-center" >
+    </div>         
+    <div id="container-cards" class="d-flex align-items-start justify-content-center">
       <div class="col">
         <div class="card">
           <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-            <img src="/assets/undraw_team.png" class="img-fluid"/>
+            <img src="/assets/undraw_Team.png" class="img-fluid"/>
             <a href="#!">
               <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
             </a>
           </div>
           <div class="card-body">
             <h5 class="card-title">Empleados</h5>
-            <p class="card-text">Gestion de empleados</p>
+            <p class="card-text">Gestion de empleados.</p>
             <button class="btn" (click)="GestionEmpleados()">Ir</button>
           </div>
         </div>
@@ -48,7 +43,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Reuniones</h5>
-            <p class="card-text">Gestion de reuniones</p>
+            <p class="card-text">Gestion de reuniones.</p>
             <button class="btn" (click)="RegistroReuniones()">Ir</button>
           </div>
         </div>
