estadistica agregado tipos

--- a/src/app/components/estadistica/estadistica.component.html
+++ b/src/app/components/estadistica/estadistica.component.html
@@ -8,6 +8,7 @@
                 <button class="btn btn-primary m-1" (click)="mesGrafica()">Por mes</button>
                 <button class="btn btn-danger m-1" (click)="anioGrafica()">Por Año</button>
                 <button class="btn btn-dark m-1" (click)="participanteGrafica()">Por Participante</button>
+                <button class="btn btn-secondary m-1" (click)="tipoGrafica()">Por Tipo reunion</button>
             </div>
 
         </div>
