--- a/src/app/components/agenda/agenda.component.css
+++ b/src/app/components/agenda/agenda.component.css
@@ -97,3 +97,12 @@ p{
     font-size: 15px;
     text-align: center;
 }
+.modal-body{
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
+.modal-body img{
+    width: 300px;
+    height: 300px;
+}
