--- a/src/app/components/audiencias/audiencias.component.html
+++ b/src/app/components/audiencias/audiencias.component.html
@@ -1,1 +1,69 @@
-<p>audiencias works!</p>
+<div id="header" class="text-center bg-image">
+    <div class="mask">
+      <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="text-white">
+          <h1 class="mb-3">Gestion de reuniones</h1>
+          <nav class="d-flex">
+          <h6 class="mb-0">
+            <a routerLink="/principal/Administrador" class="text-reset">Home</a>
+              <span>/</span>
+            <a routerLink="/principal/Administrador/gestionReuniones" class="text-reset">Gestion Reuniones</a>
+          </h6>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="col-8">
+    <h5><strong>BUSQUEDAS AVANZADAS</strong></h5>
+    <form #oficinasForm="ngForm" (click)="busquedaPorOficina()">
+      <div>
+        <div class="form-group">
+          <label for="exampleInputOrigen"><strong>Por oficinas:</strong></label>
+          <select name="oficinaSelected" id="oficinaSelected" [(ngModel)]="oficinaSelected" class="form-select" aria-label="Default select example">
+            <option *ngFor="let item of oficinas" [value]="item._id" selected>{{item.nombre}}</option>
+          </select>
+        </div>
+      </div>
+    </form>
+    
+  </div>
+  <div class="col">
+    <div class="btns">
+      
+      <button (click)="cargarReuniones()" type="button" class="btn btn-warning">MOSTRAR TODAS</button>
+    </div>
+  </div>
+  
+  <div class="card">
+      <table class="row-border hover">
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Nombre</th>
+              <th>Descripcion</th>
+              <th>Fecha</th>
+              <th>Hora</th>
+              <th>Estado</th>
+              <th>Detalle</th>
+             
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let r of reuniones">
+              <td>{{ r._id }}</td>
+              <td>{{ r.nombre }}</td>
+              <td>{{ r.descripcion }}</td>
+              <td>{{ r.fecha | date:'shortDate' }}</td>
+              <td>{{ r.horaReunion}} - {{r.horaFinalizacion}}</td>
+              <td>{{r.estadoReunion}}</td>
+              <td>
+                  <button type="button" class="btn btn-seleccionar" (click)="verDetalle(r)" _blank><i class="fa-solid fa-eye"></i></button>
+              </td>
+            
+            </tr>
+          </tbody>
+      </table>
+  </div>
+  
