--- a/src/app/components/principal-participante/principal-participante.component.html
+++ b/src/app/components/principal-participante/principal-participante.component.html
@@ -19,7 +19,7 @@
     <div id="flecha">
       <i class="fa-solid fa-angle-down"></i>
     </div>          
-    <div id="container-cards" class="d-flex align-items-start justify-content-center">
+    <div id="container-cards" class="row">
       <div class="col">
         <div class="card">
           <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
@@ -53,21 +53,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="card">
-          <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-            <img src="/assets/undraw_Calendar.png" class="img-fluid"/>
-            <a href="#!">
-              <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-            </a>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Notificaciones</h5>
-            <p class="card-text">Ver notifcaciones de <br> reuniones proximas.</p>
-            <button class="btn" >Ir</button>
-          </div>
-        </div>
-      </div>
+      
     </div>
   </div>
 </div>
