--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -14,7 +14,7 @@
 .navbar{
   background-color: #6761e2ab;
 }
-.btn{
+.t{
   font-family: 'Readex Pro', sans-serif;
   background-color: #06ffeeb9;
   color: #ffffff;
@@ -31,11 +31,25 @@
 
 .area{
   width: 300px;
-  height: 500px;
+  max-height: 500px;
   font-size: 10px;
   overflow: scroll;
 }
 
 .lead{
   font-size: 15px;
+}
+
+.ic{
+  font-size: 30px;
+  color: gold;
+}
+
+.ic span{
+  font-size: 12px;
+}
+
+.b{
+  border-radius: 80%;
+  width: max-content;
 }
