Se cambio archivoUrl por una string. Detalles del css en header y detalle reunion

--- a/src/app/components/detalle-reunion/detalle-reunion.component.html
+++ b/src/app/components/detalle-reunion/detalle-reunion.component.html
@@ -48,16 +48,21 @@
         </div>
         <div class="row justify-content-center">
             <h2>Participantes:</h2>
-            <ul *ngFor="let item of reunion.participantes">
-                <li>{{item.apellido}} {{item.nombre}} | {{item.dependencia.nombre}} - {{item.email}}</li>
-            </ul>
+            <div class="lista">
+                <ul *ngFor="let item of reunion.participantes">
+                    <li>{{item.apellido}} {{item.nombre}} | {{item.dependencia.nombre}} - {{item.email}}</li>
+                </ul>
+            </div>
+            
         </div>
         <div class="justify-content-center">
             <h2>Recursos</h2>
+            <div class="lista">
+                <ul *ngFor="let item of reunion.recursos">
+                    <li>Nombre: {{item.nombre}} | Tipo: {{item.tipo}} | <a href="{{item.archivoUrl}}"> Link</a> </li>
+                </ul>
+            </div>
             
-            <ul *ngFor="let item of reunion.recursos">
-                <li>Nombre: {{item.nombre}} | Tipo: {{item.tipo}} | </li>
-            </ul>
         </div>
         <div class="justify-content-center">
             <h2>Codigo QR:</h2>
