--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,7 +26,7 @@
         </form>
         <div class="dropdown" *ngIf="loginService.userLoggedIn()">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-            Notificaciones
+            <i class="fa-solid fa-bell"></i>
             <span class="badge bg-secondary">{{notificacionesActivas.length}}</span>
           </button>
           <ul class="dropdown-menu area dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
