--- a/src/app/components/estadistica/estadistica.component.html
+++ b/src/app/components/estadistica/estadistica.component.html
@@ -1,5 +1,21 @@
+<div id="header" class="text-center bg-image">
+        <div class="mask">
+          <div class="d-flex justify-content-center align-items-center h-100">
+            <div class="text-white">
+              <h1 class="mb-3">Estadisticas</h1>
+              <nav class="d-flex">
+              <h6 class="mb-0">
+                <a routerLink="/principal/Administrador" class="text-reset">Home</a>
+                  <span>/</span>
+                <a routerLink="/principal/Administrador/estadistica" class="text-reset">Estadisticas</a>
+              </h6>
+              </nav>
+            </div>
+          </div>
+        </div>
+</div>
 <div class="container-fluid" style="margin-bottom: 100px;">
-   
+    
     <div class="container-xl">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
