--- a/src/app/components/registro-reuniones/registro-reuniones.component.html
+++ b/src/app/components/registro-reuniones/registro-reuniones.component.html
@@ -7,7 +7,7 @@
             <!-- Breadcrumb -->
             <nav class="d-flex">
               <h6 class="mb-0">
-                <a [routerLink]="['principal/Administrador']" class="text-reset">Home</a>
+                <a routerLink="/principal/Administrador" class="text-reset">Home</a>
                 <span>/</span>
                 <a [routerLink]="['principal/Administrador/gestionReuniones/']">Gestion Reuniones</a>
                 <span>/</span>
