cambios modificar reunion

--- a/src/app/components/gestion-reuniones/gestion-reuniones.component.html
+++ b/src/app/components/gestion-reuniones/gestion-reuniones.component.html
@@ -32,7 +32,7 @@
       <div class="form-group">
         <label for="exampleInputOrigen"><strong>Por participantes:</strong></label>
         <select name="participanteSelected" id="participanteSelected" [(ngModel)]="participanteSelected" class="form-select" aria-label="Default select example">
-          <option *ngFor="let item of participantes" [value]="item._id" selected>{{item.nombre}}</option>
+          <option *ngFor="let item of participantes" [value]="item._id" selected>{{item.nombre}} {{item.apellido}} - {{item.dependencia.nombre}}</option>
         </select>
       </div>
     </div>
