--- a/src/app/components/registro-reuniones/registro-reuniones.component.html
+++ b/src/app/components/registro-reuniones/registro-reuniones.component.html
@@ -174,7 +174,7 @@
             </button>
             <div class="div-btn-agregar">
                 <button  *ngIf="accion=='new'" type="button" id="botonb"(click)="registrarReunion()" class="btn mb-3" [disabled]="form.invalid">REGISTRAR</button> 
-                <button  *ngIf="accion=='update'" type="button" (click)="modificarReunion()" class="btn mb-3" [disabled]="form.invalid">MODIFICAR</button> 
+                <button  *ngIf="accion=='update'" type="button" (click)="modificarReunion()" class="btn btn-modificar mb-3" [disabled]="form.invalid">MODIFICAR</button> 
             </div>
         </div>
     </form>
