--- a/src/app/components/gestion-empleados/gestion-empleados.component.html
+++ b/src/app/components/gestion-empleados/gestion-empleados.component.html
@@ -17,7 +17,7 @@
 <div class="btns">
   <button class="btn btn-agregar" (click)="altaEmpleado()">AGREGAR <i class="fa-solid fa-circle-plus"></i></button>
 </div>
-<div class="card m-auto w-75">
+<div class="card ">
     <table class="table">
         <thead>
             <tr>
@@ -25,8 +25,10 @@
                 <th>Nombre y Apellido</th>
                 <th>Dependencia</th>
                 <th>Email</th>
+                <th>Username</th>
+                <th>Password</th>
                 <th>Rol</th>
-               
+                <th>Estado</th>
                 <th></th>
             </tr>
         </thead>
@@ -36,8 +38,11 @@
                 <td>{{e.nombre}} {{e.apellido}}</td>
                 <td>{{e.dependencia.nombre}}</td>
                 <td>{{e.email}}</td>
+                <td>{{e.username}}</td>
+                <td>{{e.password}}</td>
                 <td>{{e.rol}}</td>
-                
+                <td *ngIf="e.estadoEmpleado==true">Activo</td>
+                <td *ngIf="e.estadoEmpleado==false">No activo</td>
                 <td>
                   <button type="button" class="btn btn-borrar" (click)="borrarEmpleado(e)"><i class="fa-solid fa-trash"></i></button>
                   <button type="button" class="btn btn-seleccionar" (click)="modificarEmpleado(e)"><i class="fa-solid fa-pen"></i></button>
