--- a/src/app/components/gestion-reuniones/gestion-reuniones.component.html
+++ b/src/app/components/gestion-reuniones/gestion-reuniones.component.html
@@ -71,10 +71,27 @@
                 <button type="button" class="btn btn-seleccionar" (click)="verDetalle(r)" _blank><i class="fa-solid fa-eye"></i></button>
             </td>
             <td>  
-                <button type="button" class="btn btn-borrar" (click)="borrarReunion(r)"><i class="fa-solid fa-trash"></i></button>
+                <button type="button" class="btn btn-borrar" (click)="confirmacionBorrar(r)"><i class="fa-solid fa-trash"></i></button>
                 <button type="button" class="btn btn-seleccionar" (click)="modificarReunion(r)"><i class="fa-solid fa-pen"></i></button>
             </td>
           </tr>
         </tbody>
     </table>
 </div>
+<ng-template #modalContent let-close="close">
+  <div class="modal-header">
+
+  </div>
+  <div class="modal-body justify-content-center">
+ 
+      <h2>Mensaje de confirmacion</h2>
+      <p>¿Quiere borrar {{ modalData?.nombreReunion}} ?</p>
+    
+  </div>
+  <div class="modal-footer justify-content-center">
+      <button class="btn btn-seleccionar" (click)="borrarReunion(modalData?.r)">Si</button>
+      <button type="button" class="btn btn-borrar" (click)="close()">
+        Cancelar
+      </button>
+  </div>
+</ng-template>
