--- a/src/app/components/registro-reuniones/registro-reuniones.component.html
+++ b/src/app/components/registro-reuniones/registro-reuniones.component.html
@@ -47,7 +47,7 @@
                                 </div>
                             </div>
                             <div class="col-5 m-auto mb-3" id="item">
-                                <label for="horaReunion" class="form-label">Ingrese Hora Inicio (08:00 - 20:00): </label><br>
+                                <label for="horaReunion" class="form-label">Ingrese Hora Inicio (08:00-20:00): </label><br>
                                 <input id="horaReunion" type="time" name="horaReunion" min="08:00" max="20:00" class="form-control" [(ngModel)]="reunion.horaReunion" required #horaReunion="ngModel">
                                 <span class="validity"></span>
                                 <div *ngIf="horaReunion.invalid && (horaReunion.touched || horaReunion.dirty)" class="alert alert-danger">
@@ -55,7 +55,7 @@
                                 </div>
                             </div>
                             <div class="col-5 m-auto mb-3" id="item">
-                                <label for="horaFinalizacion" class="form-label">Ingrese Hora Finalizacion (09:00 - 21:00): </label>
+                                <label for="horaFinalizacion" class="form-label">Ingrese Hora Finalizacion (09:00-21:00): </label>
                                 <input type="time" id="horaFinalizacion" name="horaFinalizacion" class="form-control" min="09:00" max="21:00" [(ngModel)]="reunion.horaFinalizacion" required #horaFinalizacion="ngModel">
                                 <span class="validity"></span>
                                 <div *ngIf="horaFinalizacion.invalid && (horaFinalizacion.touched || horaFinalizacion.dirty)" class="alert alert-danger">
@@ -81,8 +81,8 @@
                                 </select>
                             </div>
                             <div class="col-11 m-auto mb-3">
-                                <label for="prioridad" class="form-label">Ingrese Prioridad de la Reunion: </label>
-                                <input type="number" id="prioridad" name="prioridad" class="form-control" [(ngModel)]="reunion.prioridad" required #prioridad="ngModel">
+                                <label for="prioridad" class="form-label">Ingrese Prioridad de la Reunion (1-5): </label>
+                                <input type="number" id="prioridad" name="prioridad" class="form-control" min="1" max="5" [(ngModel)]="reunion.prioridad" required #prioridad="ngModel">
                                 <div *ngIf="prioridad.invalid && (prioridad.touched || prioridad.dirty)" class="alert alert-danger">
                                     <div *ngIf="prioridad.errors?.['required']">La prioridad de la reunion es requerida.</div>
                                 </div>
