--- a/src/app/components/registro-reuniones/registro-reuniones.component.html
+++ b/src/app/components/registro-reuniones/registro-reuniones.component.html
@@ -100,7 +100,7 @@
                                 <tbody>
                                     <tr *ngFor="let p of participantes">
                                         <td>{{p.nombre}} {{p.apellido}}</td>
-                                        <td><button type="button" class="btn btn-dark" (click)="seleccionarParticipante(p)">Seleccionar</button></td>
+                                        <td><button type="button" class="btn btn-dark" (click)="seleccionarParticipante(p, $event)">Seleccionar</button></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -121,14 +121,14 @@
                 <div class="carousel-item">
                     <div class="card">
                         <div class="card-body row m-auto">
-                            <form #form="ngForm" action="">
+                            <form #formRecurso="ngForm" action="">
                                 <div class="col-11 m-auto mb-3">
-                                    <label for="nombreRecurso" class="form-label">Ingrese nombre del Recurso</label>
-                                    <input type="text" class="form-control" name="nombreRecurso" id="nombreRecurso" [(ngModel)]="recurso.nombre" required #nombre="ngModel">
+                                    <label for="nombre" class="form-label">Ingrese nombre del Recurso</label>
+                                    <input type="text" class="form-control" name="nombre" id="nombre" [(ngModel)]="recurso.nombre" required #nombre="ngModel">
                                 </div>
                                 <div class="col-11 m-auto mb-3">
-                                    <label for="tipoRecurso" class="form-label">Seleccione el tipo de Archivo: </label>
-                                    <select name="tipoRecurso" id="tipoRecurso" class="form-select" [(ngModel)]="recurso.tipo" required #tipo="ngModel">
+                                    <label for="tipo" class="form-label">Seleccione el tipo de Archivo: </label>
+                                    <select name="tipo" id="tipo" class="form-select" [(ngModel)]="recurso.tipo" required #tipo="ngModel">
                                         <option value="pdf">PDF</option>
                                         <option value="imagen">Imagen</option>
                                         <option value="power point">Power Point</option>
@@ -136,14 +136,15 @@
                                     </select>
                                 </div>
                                 <div class="col-11 m-auto mb-3">
-                                    <label for="selecrecurso" class="form-label">Cargar Archivo: </label>
+                                    <label for="archivoUrl" class="form-label">Cargar Archivo: </label>
                                     <!-- <input type="file" class="form-control" name="selecrecurso" id="selecrecurso" alife-file-to-base64 multiple
                                         (onFileChanged)="onFileChanges($event)"
                                         accept="image/x-png,image/gif,image/jpeg" /> -->
-                                    <input type="text" class="form-control" name="selecrecurso" id="selecrecurso" [(ngModel)]="recurso.archivoUrl" >
+                                    <input type="text" class="form-control" name="archivoUrl" id="archivoUrl" [(ngModel)]="recurso.archivoUrl" >
                                 </div>
-                                <button type="button" id="boton" class="btn btn-dark" (click)="cargarRecurso()" [disabled]="form.invalid">Cargar Recurso</button>
-                                <table class="table">
+                                <button type="button" id="boton" class="btn btn-dark" (click)="cargarRecurso()" [disabled]="formRecurso.invalid">Cargar Recurso</button>
+                            </form>    
+                            <table class="table">
                                 <thead>
                                     <tr>
                                         <th scope="col">Nombre Recurso</th>
@@ -159,10 +160,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            </form>
                         </div>
-                       
-                       
                     </div>
                 </div>
             </div>
