Validacion: legajo, lista

--- a/src/app/components/registro-reuniones/registro-reuniones.component.html
+++ b/src/app/components/registro-reuniones/registro-reuniones.component.html
@@ -9,7 +9,7 @@
               <h6 class="mb-0">
                 <a routerLink="/principal/Administrador" class="text-reset">Home</a>
                 <span>/</span>
-                <a [routerLink]="['principal/Administrador/gestionReuniones/']">Gestion Reuniones</a>
+                <a routerLink="/principal/Administrador/gestionReuniones">Gestion Reuniones</a>
                 <span>/</span>
                 <a href="#">Formulario Reunion</a>
               </h6>
