--- a/src/app/components/form-empleado/form-empleado.component.html
+++ b/src/app/components/form-empleado/form-empleado.component.html
@@ -25,7 +25,7 @@
         
         
         <div class="row mb-2 " id="item">
-            <div class="col-6 ">
+            <div class="col-6">
                 <label for="nombre" class="form-label">Nombre: </label>
                 <input type="text" id="nombre" name="nombre" class="form-control" [(ngModel)]="empleado.nombre" 
                     required #nombre="ngModel" verificar-caracter-especial verificar-primera-letra>
@@ -49,21 +49,21 @@
         </div>
         <div class="col-12" id="item">
             <label for="email" class="form-label">Email: </label>
-            <input type="email" id="email" name="email" class="form-control" [(ngModel)]="empleado.email" required #email="ngModel">
+            <input type="email" id="email" name="email" class="form-control" [(ngModel)]="empleado.email" required #email="ngModel" >
             <div *ngIf="email.invalid && (email.touched || email.dirty)" class="alert alert-danger">
                 <div *ngIf="email.errors?.['required']">El email es requerido.</div>
             </div>
         </div>
         <div class="col-12" id="item">
             <label for="legajo" class="form-label">Legajo: </label>
-            <input type="text" id="legajo" name="legajo" class="form-control" [(ngModel)]="empleado.legajo" required #legajo="ngModel">
+            <input type="text" id="legajo" name="legajo" class="form-control" [(ngModel)]="empleado.legajo" required #legajo="ngModel" [disabled]="accion=='update'">
             <div *ngIf="legajo.invalid && (legajo.touched || legajo.dirty)" class="alert alert-danger">
                 <div *ngIf="legajo.errors?.['required']">El legajo es requerido.</div>
             </div>
         </div>
         <div class="col-12" id="item">
             <label for="username" class="form-label">Username: </label>
-            <input type="text" id="username" name="username" class="form-control" [(ngModel)]="empleado.username" required #username="ngModel">
+            <input type="text" id="username" name="username" class="form-control" [(ngModel)]="empleado.username" required #username="ngModel" [disabled]="accion=='update'">
             <div *ngIf="username.invalid && (username.touched || username.dirty)" class="alert alert-danger">
                 <div *ngIf="username.errors?.['required']">El username es requerido.</div>
             </div>
